--- a/20170808hack-ios/Base.lproj/Main.storyboard
+++ b/20170808hack-ios/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,84 +23,76 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y1w-Ak-qpd">
-                                <rect key="frame" x="64" y="330" width="57" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="アイコン.png" translatesAutoresizingMaskIntoConstraints="NO" id="DXW-xc-j9N">
+                                <rect key="frame" x="61.5" y="45" width="252" height="252"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="DXW-xc-j9N" secondAttribute="height" multiplier="1:1" id="eii-uh-By5"/>
+                                    <constraint firstAttribute="height" constant="252" id="qv7-uu-3oH"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="kittol" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iuw-bV-xzU">
+                                <rect key="frame" x="138.5" y="267" width="98.5" height="49"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="41"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzW-vp-g7u">
-                                <rect key="frame" x="64" y="436.5" width="74" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fr8-qu-iyD">
-                                <rect key="frame" x="57" y="364.5" width="263" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Zom-dj-1eW"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MsI-jC-5Re">
-                                <rect key="frame" x="57" y="472" width="263" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="ah0-O1-gBh"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
-                            </textField>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8sZ-gP-hT3">
-                                <rect key="frame" x="151" y="548" width="76" height="42"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Kdd-DW-2sk">
+                                <rect key="frame" x="31" y="451.5" width="313" height="165.5"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Ak9-qR-tGm">
-                                        <rect key="frame" x="0.0" y="0.0" width="76" height="42"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="6Mt-qU-E5k">
+                                        <rect key="frame" x="0.0" y="0.0" width="313" height="80"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jin-wz-tm1">
-                                                <rect key="frame" x="0.0" y="0.0" width="76" height="42"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2aV-a8-tyw">
-                                                        <rect key="frame" x="0.0" y="0.0" width="76" height="42"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                                        <state key="normal" title="Sign In"/>
-                                                        <connections>
-                                                            <segue destination="Joe-jy-4Zv" kind="show" id="tyR-5s-3wl"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                            </stackView>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fr8-qu-iyD">
+                                                <rect key="frame" x="0.0" y="0.0" width="313" height="40"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PASSWORD" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MsI-jC-5Re">
+                                                <rect key="frame" x="0.0" y="40" width="313" height="40"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                                            </textField>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="80" id="xXL-St-61m"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="BRS-Jw-hjY">
+                                        <rect key="frame" x="0.0" y="100" width="313" height="65.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2aV-a8-tyw">
+                                                <rect key="frame" x="0.0" y="0.0" width="313" height="40"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <state key="normal" title="ログイン" backgroundImage="login.png">
+                                                    <color key="titleColor" red="0.63954001665115356" green="0.63535135984420776" blue="0.63534331321716309" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="Joe-jy-4Zv" kind="show" id="tyR-5s-3wl"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アカウントの作成" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOd-L8-Zss">
+                                                <rect key="frame" x="0.0" y="45" width="313" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="アイコン.png" translatesAutoresizingMaskIntoConstraints="NO" id="DXW-xc-j9N">
-                                <rect key="frame" x="68" y="69" width="243" height="252"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="252" id="qv7-uu-3oH"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.95973908900000005" green="0.82689285280000002" blue="0.85884416100000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="DXW-xc-j9N" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="52" id="0La-pI-erI"/>
-                            <constraint firstItem="Fr8-qu-iyD" firstAttribute="trailing" secondItem="MsI-jC-5Re" secondAttribute="trailing" id="1lU-f2-Slw"/>
-                            <constraint firstItem="Fr8-qu-iyD" firstAttribute="leading" secondItem="MsI-jC-5Re" secondAttribute="leading" id="BUl-Se-KtZ"/>
-                            <constraint firstItem="DXW-xc-j9N" firstAttribute="centerX" secondItem="8sZ-gP-hT3" secondAttribute="centerX" id="BWF-hm-9pu"/>
-                            <constraint firstItem="Y1w-Ak-qpd" firstAttribute="leading" secondItem="DzW-vp-g7u" secondAttribute="leading" id="D8F-UE-ibn"/>
-                            <constraint firstItem="DXW-xc-j9N" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="49" id="FuQ-WR-cHK"/>
-                            <constraint firstItem="Y1w-Ak-qpd" firstAttribute="top" secondItem="DXW-xc-j9N" secondAttribute="bottom" constant="9" id="Jkq-ym-e1C"/>
-                            <constraint firstItem="MsI-jC-5Re" firstAttribute="top" secondItem="DzW-vp-g7u" secondAttribute="bottom" constant="15" id="MsA-gG-6C8"/>
-                            <constraint firstItem="DzW-vp-g7u" firstAttribute="top" secondItem="Fr8-qu-iyD" secondAttribute="bottom" constant="42" id="RQY-QQ-phM"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8sZ-gP-hT3" secondAttribute="bottom" constant="77" id="SHY-Y3-N5G"/>
-                            <constraint firstItem="Fr8-qu-iyD" firstAttribute="top" secondItem="Y1w-Ak-qpd" secondAttribute="bottom" constant="14" id="Y7z-5q-geK"/>
-                            <constraint firstItem="Y1w-Ak-qpd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="48" id="aR1-1I-XPL"/>
-                            <constraint firstItem="MsI-jC-5Re" firstAttribute="centerX" secondItem="8sZ-gP-hT3" secondAttribute="centerX" id="fJm-Wf-omU"/>
-                            <constraint firstItem="8sZ-gP-hT3" firstAttribute="top" secondItem="MsI-jC-5Re" secondAttribute="bottom" constant="46" id="fPv-U7-7h9"/>
-                            <constraint firstItem="Fr8-qu-iyD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="41" id="qkB-Ns-qXA"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Fr8-qu-iyD" secondAttribute="trailing" constant="39" id="x7T-ob-VJy"/>
+                            <constraint firstItem="Kdd-DW-2sk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="15" id="6ff-to-mdJ"/>
+                            <constraint firstItem="DXW-xc-j9N" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="FuQ-WR-cHK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Kdd-DW-2sk" secondAttribute="trailing" constant="15" id="TdE-NS-XSO"/>
+                            <constraint firstItem="iuw-bV-xzU" firstAttribute="top" secondItem="DXW-xc-j9N" secondAttribute="bottom" constant="-30" id="U41-9k-jKk"/>
+                            <constraint firstItem="iuw-bV-xzU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bm4-6Q-PdB"/>
+                            <constraint firstItem="DXW-xc-j9N" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gk7-rG-a7L"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Kdd-DW-2sk" secondAttribute="bottom" constant="50" id="ilC-6g-Kwd"/>
+                            <constraint firstItem="Kdd-DW-2sk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oae-EO-Tjk"/>
                         </constraints>
                     </view>
                     <connections>
@@ -461,6 +454,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="login.png" width="180" height="40"/>
         <image name="tab_icon1.png" width="22" height="31"/>
         <image name="tab_icon2.png" width="31" height="31"/>
         <image name="アイコン.png" width="741" height="529"/>
